--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
               <img src="images/harshal.jpg" alt="Image" class="img-fluid mr-3">
               <div>
                 <h3>Harshal Jhawar</h3>
-                <span>7th Sem Student</span>
+                <span>Passed out student of 2019 batch</span>
               </div>
             </div>
             <div>
@@ -415,7 +415,7 @@
               <img src="images/pavanpai.jpg" alt="Image" class="img-fluid mr-3">
               <div>
                 <h3>Pavan Pai</h3>
-                <span>7th Sem Student</span>
+                <span>Passed out student of 2019 batch</span>
               </div>
             </div>
             <div>
@@ -428,7 +428,7 @@
               <img src="images/swa.jpg" alt="Image" class="img-fluid mr-3">
               <div>
                 <h3>Gowdara Shahidhara Swaroop </h3>
-                <span>7th Sem Student</span>
+                <span>Passed out student of 2019 batch</span>
               </div>
             </div>
             <div>
@@ -441,7 +441,7 @@
               <img src="images/shri.jpg" alt="Image" class="img-fluid mr-3">
               <div>
                 <h3>Shrilakshmi Kulkarni</h3>
-                <span>5th Sem Student</span>
+                <span>7th Sem Student</span>
               </div>
             </div>
             <div>
@@ -454,7 +454,7 @@
               <img src="images/tejana.jpg" alt="Image" class="img-fluid mr-3">
               <div>
                 <h3>Tejana Goudar</h3>
-                <span>5th Sem Student</span>
+                <span>7th Sem Student</span>
               </div>
             </div>
             <div>
