--- a/about.html
+++ b/about.html
@@ -317,7 +317,7 @@
             <div class="feature-1 border person text-center">
                 <img src="images/kar.jpg" alt="Image" class="img-fluid">
               <div class="feature-1-content">
-                <h2>Prof. Legend Neelakanth V. Karekar</h2>
+                <h2>Prof. Neelakanth V. Karekar</h2>
                 <span class="position mb-3 d-block">Assitant Professor</span>
                 <h5><p style="font-size:85%;">
                   Area of Interests:Image Processing</br>
