--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <div class="ftco-testimonial-vcard d-flex align-items-center mb-4">
               <img src="images/vasvi.jpg" alt="Image" class="img-fluid mr-3">
               <div>
-                <h3>Vasavi Dixit</h3>
+                <h3>Great Vasavi Dixit</h3>
                 <span>Passed out student of 2018 batch </span>
               </div>
             </div>
