--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
               <span class="icon flaticon-school-material"></span>
               <h3>Academics Principle</h3>
-              <p>To Impart quality technical education in the field of IT and enhance intellectual and professional competence amongst the aspiring engineers.</p>
+              <p>To Impart the quality technical education in the field of IT and enhance intellectual and professional competence amongst the aspiring engineers.</p>
             </div>
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
               <span class="icon flaticon-library"></span>
