--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <h2 class="section-title-underline mb-3">
               <span>Popular Courses</span>
             </h2>
-            <p>Enroll Now!</p>
+            <p>Enroll Now!!</p>
           </div>
         </div>
 
@@ -610,8 +610,8 @@
       					Email-gudianirudha27@gmail.com</br>
       				</p>
       				</div>
-      				
-      			
+
+
       			</div>
 
 
